# sonic-globalacceld

./: .kde-ci.yml  CMakeLists.txt  KGlobalAccelDConfig.cmake.in
autotests/: CMakeLists.txt  dummy.cpp  dummy.h  kglobalshortcutsrc.expected  migrateconfigtest.cpp  shortcutstest.cpp
autotests/migrate/: migratetest.cpp  move-group  move-group-defaulted  move-group-defaulted.expected  move-group-regex.expected  move-group.expected  move-to-desktop-action.expected  move-to-desktop-launch.expected
kconf_update/: CMakeLists.txt  kdeglobalacceld.upd
src/: CMakeLists.txt  component.cpp  component.h  globalshortcut.h  globalshortcutsregistry.cpp  globalshortcutsregistry.h  kglobalaccel_interface.cpp  kglobalaccel_interface.h  kglobalacceld.desktop.in  kglobalacceld.h  kserviceactioncomponent.cpp  kserviceactioncomponent.h  main.cpp  sequencehelpers_p.cpp
src/plugins/: CMakeLists.txt
src/plugins/test/: CMakeLists.txt  kglobalaccel_test.cpp  kglobalaccel_test.h  test.json
src/plugins/xcb/: kglobalaccel_x11.cpp  kglobalaccel_x11.h
src/tools/migrate/: CMakeLists.txt  main.cpp  move.cpp
